--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@
 #    pip-compile
 #
 aioredis==1.3.1           # via channels-redis
-amqp==2.6.1               # via kombu
+amqp==5.0.1               # via kombu
 aniso8601==7.0.0          # via flask-restful, raiden
 asgiref==3.2.10           # via channels, channels-redis, daphne, django
 asn1crypto==1.3.0         # via coincurve, raiden
@@ -17,24 +17,26 @@ backcall==0.1.0           # via ipython, raiden
 base58==2.0.0             # via multiaddr, raiden
 billiard==3.6.3.0         # via celery
 bitarray==1.2.1           # via eth-account, raiden
-bump2version==1.0.0       # via -r requirements.in
+bump2version==1.0.1       # via -r requirements.in
 cachetools==4.1.1         # via raiden
-celery==4.4.7             # via -r requirements.in
+celery==5.0.1             # via -r requirements.in
 certifi==2019.3.9         # via raiden, requests
 cffi==1.12.3              # via coincurve, cryptography, raiden
 channels-redis==3.1.0     # via -r requirements.in
 channels==2.4.0           # via -r requirements.in, channels-redis
 chardet==3.0.4            # via raiden, requests
-click==7.0                # via flask, mkdocs, nltk, raiden, raiden-contracts, uvicorn
+click-didyoumean==0.0.3   # via celery
+click-repl==0.1.6         # via celery
+click==7.0                # via celery, click-didyoumean, click-repl, flask, mkdocs, nltk, raiden, raiden-contracts, uvicorn
 coincurve==13.0.0         # via ethereum, raiden, raiden-contracts
 colorama==0.4.3           # via raiden
 constantly==15.1.0        # via twisted
-cryptography==3.1         # via autobahn, pyopenssl, service-identity
+cryptography==3.1.1       # via autobahn, pyjwt, pyopenssl, service-identity
 cytoolz==0.10.1           # via eth-keyfile, eth-utils, raiden
 daphne==2.5.0             # via channels
 decorator==4.4.0          # via ipython, networkx, raiden, traitlets
 defusedxml==0.6.0         # via python3-openid
-django-allauth==0.42.0    # via -r requirements.in
+django-allauth==0.43.0    # via -r requirements.in
 django-cors-headers==3.5.0  # via -r requirements.in
 django-ipware==3.0.1      # via -r requirements.in
 django-model-utils==4.0.0  # via -r requirements.in
@@ -43,8 +45,8 @@ django-pdb==0.6.2         # via -r requirements.in
 django-redis==4.12.1      # via -r requirements.in
 django-rest-auth==0.9.5   # via -r requirements.in
 django-smtp-ssl==1.0      # via -r requirements.in
-django==3.1.1             # via -r requirements.in, channels, django-allauth, django-cors-headers, django-model-utils, django-money, django-redis, django-rest-auth, djangorestframework
-djangorestframework==3.11.1  # via -r requirements.in, django-rest-auth
+django==3.1.2             # via -r requirements.in, channels, django-allauth, django-cors-headers, django-model-utils, django-money, django-redis, django-rest-auth, djangorestframework
+djangorestframework==3.12.1  # via -r requirements.in, django-rest-auth
 ecdsa==0.16.0             # via eth-wallet
 eth-abi==2.1.0            # via -r requirements.in, eth-account, raiden, raiden-contracts, web3
 eth-account==0.5.2        # via raiden, web3
@@ -56,8 +58,8 @@ eth-typing==2.2.1         # via eth-abi, eth-keys, eth-utils, raiden, raiden-con
 eth-utils==1.9.0          # via eth-abi, eth-account, eth-keyfile, eth-keys, eth-rlp, hexbytes, raiden, raiden-contracts, rlp, web3
 eth-wallet==0.3.1         # via -r requirements.in
 ethereum==2.3.2           # via -r requirements.in
-factory-boy==3.0.1        # via -r requirements.in
-faker==4.1.3              # via factory-boy
+factory-boy==3.1.0        # via -r requirements.in
+faker==4.14.0             # via factory-boy
 filelock==3.0.12          # via raiden
 flask-cors==3.0.8         # via raiden
 flask-restful==0.3.8      # via raiden
@@ -67,27 +69,26 @@ gevent==20.6.2            # via raiden
 graphviz==0.13.2          # via objgraph, raiden
 greenlet==0.4.16          # via gevent, raiden
 guppy3==3.0.10.post1      # via raiden
-h11==0.9.0                # via uvicorn
+h11==0.11.0               # via uvicorn
 hexbytes==0.2.0           # via eth-account, eth-rlp, raiden, web3
 hiredis==1.1.0            # via aioredis
-httptools==0.1.1          # via uvicorn
 hyperlink==20.0.1         # via twisted
 idna==2.8                 # via hyperlink, raiden, requests, twisted
 incremental==17.5.0       # via twisted
-iniconfig==1.0.1          # via pytest
+iniconfig==1.1.1          # via pytest
 ipfshttpclient==0.4.12    # via raiden, web3
 ipython-genutils==0.2.0   # via raiden, traitlets
 ipython==7.16.1           # via raiden
 itsdangerous==1.1.0       # via flask, raiden
 jedi==0.17.0              # via ipython, raiden
 jinja2==2.10.1            # via flask, mkdocs, raiden
-joblib==0.16.0            # via nltk
+joblib==0.17.0            # via nltk
 jsonschema==3.2.0         # via raiden, web3
-kombu==4.6.11             # via celery
+kombu==5.0.2              # via celery
 livereload==2.6.3         # via mkdocs
 lru-dict==1.1.6           # via raiden, web3
 lunr[languages]==0.5.8    # via mkdocs
-markdown==3.2.2           # via mkdocs, mkdocs-material, pymdown-extensions
+markdown==3.3.2           # via mkdocs, mkdocs-material, pymdown-extensions
 markupsafe==1.1.1         # via jinja2, raiden
 marshmallow-dataclass==6.0.0  # via raiden
 marshmallow-enum==1.5.1   # via raiden
@@ -95,11 +96,10 @@ marshmallow-polyfield==5.9  # via raiden
 marshmallow==3.7.0        # via marshmallow-dataclass, marshmallow-enum, marshmallow-polyfield, raiden
 matrix-client==0.3.2      # via raiden
 mirakuru==2.1.2           # via raiden
-mkdocs-material-extensions==1.0  # via mkdocs-material
-mkdocs-material==5.5.12   # via -r requirements.in, mkdocs-material-extensions
+mkdocs-material-extensions==1.0.1  # via mkdocs-material
+mkdocs-material==6.1.0    # via -r requirements.in, mkdocs-material-extensions
 mkdocs==1.1.2             # via -r requirements.in, mkdocs-material
 mnemonic==0.19            # via eth-wallet
-more-itertools==8.5.0     # via pytest
 msgpack==1.0.0            # via channels-redis
 multiaddr==0.0.9          # via ipfshttpclient, raiden
 mypy-extensions==0.4.3    # via -r requirements.in, raiden, raiden-contracts, typing-inspect
@@ -116,7 +116,7 @@ pbkdf2==1.3               # via ethereum
 pexpect==4.8.0            # via ipython, raiden
 pickleshare==0.7.5        # via ipython, raiden
 pluggy==0.13.1            # via pytest
-prompt-toolkit==3.0.5     # via ipython, raiden
+prompt-toolkit==3.0.5     # via click-repl, ipython, raiden
 protobuf==3.11.3          # via raiden, web3
 psutil==5.7.0             # via mirakuru, raiden
 psycopg2-binary==2.8.6    # via -r requirements.in
@@ -127,22 +127,22 @@ py-solc==3.2.0            # via raiden, raiden-contracts
 py==1.9.0                 # via pytest
 pyasn1-modules==0.2.8     # via service-identity
 pyasn1==0.4.8             # via pyasn1-modules, service-identity
-pycoingecko==1.3.0        # via -r requirements.in
+pycoingecko==1.4.0        # via -r requirements.in
 pycparser==2.19           # via cffi, raiden
 pycryptodome==3.8.2       # via -r requirements.in, eth-hash, eth-keyfile, ethereum, raiden
 pyethash==0.1.27          # via ethereum
 pygments==2.6.1           # via ipython, mkdocs-material, raiden
 pyhamcrest==2.0.2         # via twisted
-pyjwt==1.7.1              # via -r requirements.in
-pymdown-extensions==8.0   # via mkdocs-material
+pyjwt[crypto]==1.7.1      # via -r requirements.in, django-allauth
+pymdown-extensions==8.0.1  # via mkdocs-material
 pyopenssl==19.1.0         # via twisted
 pyparsing==2.4.7          # via packaging
 pyrsistent==0.15.7        # via jsonschema, raiden
 pysha3==1.0.2             # via eth-wallet, ethereum, raiden
 pytest-asyncio==0.14.0    # via -r requirements.in
-pytest-django==3.10.0     # via -r requirements.in
+pytest-django==4.0.0      # via -r requirements.in
 pytest-env==0.6.2         # via -r requirements.in
-pytest==6.0.2             # via pytest-asyncio, pytest-django, pytest-env
+pytest==6.1.1             # via pytest-asyncio, pytest-django, pytest-env
 python-dateutil==2.8.1    # via faker
 python-dotenv==0.14.0     # via -r requirements.in
 python3-openid==3.2.0     # via django-allauth
@@ -152,7 +152,7 @@ raiden-webui==1.0.2       # via raiden
 raiden==1.1.1             # via -r requirements.in
 raiden_contracts==0.37.1  # via -r requirements.in, raiden
 redis==3.5.3              # via django-redis
-regex==2020.7.14          # via nltk
+regex==2020.10.15         # via nltk
 repoze.lru==0.7           # via ethereum
 requests-oauthlib==1.3.0  # via django-allauth
 requests==2.24.0          # via django-allauth, ipfshttpclient, matrix-client, pycoingecko, raiden, requests-oauthlib, web3
@@ -161,27 +161,26 @@ scrypt==0.8.17            # via ethereum
 semantic-version==2.6.0   # via py-solc, raiden
 semver==2.8.1             # via raiden, raiden-contracts
 service-identity==18.1.0  # via twisted
-six==1.12.0               # via automat, cryptography, django-rest-auth, ecdsa, flask-cors, flask-restful, ipfshttpclient, jsonschema, livereload, lunr, multiaddr, packaging, parsimonious, protobuf, pyopenssl, pyrsistent, python-dateutil, raiden, structlog, traitlets
-sqlparse==0.3.1           # via django
+six==1.12.0               # via automat, click-repl, cryptography, django-rest-auth, ecdsa, flask-cors, flask-restful, ipfshttpclient, jsonschema, livereload, lunr, multiaddr, packaging, parsimonious, protobuf, pyopenssl, pyrsistent, python-dateutil, raiden, structlog, traitlets
+sqlparse==0.4.1           # via django
 structlog==20.1.0         # via raiden
 text-unidecode==1.3       # via faker
 toml==0.10.1              # via pytest, raiden
 toolz==0.9.0              # via cytoolz, raiden
 tornado==6.0.4            # via livereload, mkdocs
-tqdm==4.49.0              # via nltk
+tqdm==4.50.2              # via nltk
 traitlets==4.3.2          # via ipython, raiden
 twisted[tls]==20.3.0      # via daphne
 txaio==20.4.1             # via autobahn
 typing-extensions==3.7.4.2  # via raiden
 typing-inspect==0.4.0     # via marshmallow-dataclass, raiden
 urllib3==1.25.3           # via raiden, requests
-uvicorn==0.11.8           # via -r requirements.in
-uvloop==0.14.0            # via uvicorn
+uvicorn==0.12.2           # via -r requirements.in
 varint==1.0.2             # via multiaddr, raiden
-vine==1.3.0               # via amqp, celery
+vine==5.0.0               # via amqp, celery
 wcwidth==0.1.9            # via prompt-toolkit, raiden
 web3==5.11.1              # via -r requirements.in, raiden, raiden-contracts
-websockets==8.1           # via raiden, uvicorn, web3
+websockets==8.1           # via raiden, web3
 werkzeug==1.0.1           # via flask, raiden
 zope.event==4.4           # via gevent, raiden
 zope.interface==5.1.0     # via gevent, raiden, twisted
