--- a/requirements.txt
+++ b/requirements.txt
@@ -19,15 +19,16 @@ billiard==3.6.3.0         # via celery
 bitarray==1.2.1           # via eth-account, raiden
 bump2version==1.0.1       # via -r requirements.in
 cachetools==4.1.1         # via raiden
-celery==5.0.2             # via -r requirements.in
+celery==5.0.3             # via -r requirements.in
 certifi==2019.3.9         # via raiden, requests
 cffi==1.12.3              # via coincurve, cryptography, raiden
 channels-redis==3.2.0     # via -r requirements.in
 channels==3.0.2           # via -r requirements.in, channels-redis
 chardet==3.0.4            # via raiden, requests
 click-didyoumean==0.0.3   # via celery
+click-plugins==1.1.1      # via celery
 click-repl==0.1.6         # via celery
-click==7.0                # via celery, click-didyoumean, click-repl, flask, mkdocs, nltk, raiden, raiden-contracts, uvicorn
+click==7.0                # via celery, click-didyoumean, click-plugins, click-repl, flask, mkdocs, nltk, raiden, raiden-contracts, uvicorn
 coincurve==13.0.0         # via ethereum, raiden, raiden-contracts
 colorama==0.4.3           # via raiden
 constantly==15.1.0        # via twisted
@@ -36,16 +37,17 @@ cytoolz==0.10.1           # via eth-keyfile, eth-utils, raiden
 daphne==3.0.1             # via channels
 decorator==4.4.0          # via ipython, networkx, raiden, traitlets
 defusedxml==0.6.0         # via python3-openid
-django-allauth==0.43.0    # via -r requirements.in
+django-allauth==0.44.0    # via -r requirements.in
 django-cors-headers==3.5.0  # via -r requirements.in
+django-filter==2.4.0      # via -r requirements.in
 django-ipware==3.0.2      # via -r requirements.in
-django-model-utils==4.0.0  # via -r requirements.in
-django-money==1.1         # via -r requirements.in
+django-model-utils==4.1.1  # via -r requirements.in
+django-money==1.2.1       # via -r requirements.in
 django-pdb==0.6.2         # via -r requirements.in
 django-redis==4.12.1      # via -r requirements.in
 django-rest-auth==0.9.5   # via -r requirements.in
 django-smtp-ssl==1.0      # via -r requirements.in
-django==3.1.3             # via -r requirements.in, channels, django-allauth, django-cors-headers, django-model-utils, django-money, django-redis, django-rest-auth, djangorestframework
+django==3.1.4             # via -r requirements.in, channels, django-allauth, django-cors-headers, django-filter, django-model-utils, django-money, django-redis, django-rest-auth, djangorestframework
 djangorestframework==3.12.2  # via -r requirements.in, django-rest-auth
 ecdsa==0.16.1             # via eth-wallet
 eth-abi==2.1.0            # via -r requirements.in, eth-account, raiden, raiden-contracts, web3
@@ -59,7 +61,7 @@ eth-utils==1.9.5          # via eth-abi, eth-account, eth-keyfile, eth-keys, eth
 eth-wallet==0.3.1         # via -r requirements.in
 ethereum==2.3.2           # via -r requirements.in
 factory-boy==3.1.0        # via -r requirements.in
-faker==4.17.1             # via factory-boy
+faker==5.0.0              # via factory-boy
 filelock==3.0.12          # via raiden
 flask-cors==3.0.9         # via raiden
 flask-restful==0.3.8      # via raiden
@@ -110,7 +112,7 @@ networkx==2.5             # via raiden
 nltk==3.5                 # via lunr
 oauthlib==3.1.0           # via requests-oauthlib
 objgraph==3.4.1           # via raiden
-packaging==20.4           # via pytest
+packaging==20.7           # via pytest
 parsimonious==0.8.1       # via eth-abi, raiden
 parso==0.7.0              # via jedi, raiden
 pbkdf2==1.3               # via ethereum
@@ -136,7 +138,7 @@ pygments==2.7.2           # via ipython, mkdocs-material, raiden
 pyhamcrest==2.0.2         # via twisted
 pyjwt[crypto]==1.7.1      # via -r requirements.in, django-allauth
 pymdown-extensions==8.0.1  # via mkdocs-material
-pyopenssl==19.1.0         # via twisted
+pyopenssl==20.0.0         # via twisted
 pyparsing==2.4.7          # via packaging
 pyrsistent==0.15.7        # via jsonschema, raiden
 pysha3==1.0.2             # via eth-wallet, ethereum, raiden
@@ -162,14 +164,14 @@ scrypt==0.8.17            # via ethereum
 semantic-version==2.6.0   # via py-solc, raiden
 semver==2.8.1             # via raiden, raiden-contracts
 service-identity==18.1.0  # via twisted
-six==1.12.0               # via automat, click-repl, cryptography, django-rest-auth, ecdsa, flask-cors, flask-restful, jsonschema, livereload, lunr, multiaddr, packaging, parsimonious, protobuf, pyopenssl, pyrsistent, python-dateutil, raiden, structlog, traitlets
+six==1.12.0               # via automat, click-repl, cryptography, django-rest-auth, ecdsa, flask-cors, flask-restful, jsonschema, livereload, lunr, multiaddr, parsimonious, protobuf, pyopenssl, pyrsistent, python-dateutil, raiden, structlog, traitlets
 sqlparse==0.4.1           # via django
 structlog==20.1.0         # via raiden
 text-unidecode==1.3       # via faker
 toml==0.10.1              # via pytest, raiden
 toolz==0.9.0              # via cytoolz, raiden
 tornado==6.1              # via livereload, mkdocs
-tqdm==4.53.0              # via nltk
+tqdm==4.54.0              # via nltk
 traitlets==4.3.2          # via ipython, raiden
 twisted[tls]==20.3.0      # via daphne
 txaio==20.4.1             # via autobahn
