(feat) Frontend application can set backend API URL
Make separate docker service for django admin
Token authentication for REST API
Frontend components indicate backend server connections

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -5,3 +5,6 @@ tag = False
 
 [bumpversion:file:setup.py]
 serialize = {major}.{minor}.{patch}
+
+[bumpversion:file:hub20/api/__init__.py]
+serialize = {major}.{minor}.{patch}
