--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,9 +16,8 @@ test:
 
   script:
     - export
-    - ln -s docker/environments/ci.env .env
-    - docker-compose -f docker-compose.yml -f docker/compose/ci.yml up -d
-    - docker-compose exec -T web pytest
+    - docker-compose -f docker/compose/ci.yml up -d
+    - docker-compose -f docker/compose/ci.yml exec -T web pytest
 
   only:
     - develop
