--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,15 +47,18 @@ test:
     - branches
 
 
-docker:
+build_docker_image:
+  image: docker:19
   stage: release
   services:
-    - docker:dind
+    - docker:19-dind
 
   before_script:
-    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
+
   script:
-    - docker build --pull -t $CI_REGISTRY_IMAGE .
-    - docker push $CI_REGISTRY_IMAGE
+    - docker build --pull -t "$CI_REGISTRY_IMAGE" .
+    - docker push "$CI_REGISTRY_IMAGE"
+
   only:
     - master
