--- a/pytest.ini
+++ b/pytest.ini
@@ -11,3 +11,5 @@ env =
 filterwarnings =
     ignore:The loop argument is deprecated:DeprecationWarning
     ignore::django.utils.deprecation.RemovedInDjango40Warning
+    ignore:Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated since Python 3.3, and in 3.9 it will stop working:DeprecationWarning
+    ignore:The eth_utils.typing module will be deprecated in favor of eth-typing in the next major version bump:DeprecationWarning
