--- a/docker/environments/dev.env
+++ b/docker/environments/dev.env
@@ -1,3 +1,5 @@
+COMPOSE_PROJECT_NAME=hub20_dev
+
 DJANGO_SETTINGS_MODULE=hub20.api.settings
 HUB20_DATA_FOLDER=/var/hub20
 HUB20_STATIC_ROOT=/var/hub20/static
