--- a/requirements.in
+++ b/requirements.in
@@ -7,7 +7,6 @@ django-cors-headers
 django-filter
 django-ipware
 django-model-utils
-django-pdb
 django-redis
 djangorestframework
 django-rest-auth
@@ -15,23 +14,18 @@ django_smtp_ssl
 django-money
 ethereum
 eth-abi
-eth-keyfile
 eth-wallet
 mypy_extensions
 psycopg2-binary
 pycoingecko
 pycryptodome
 pyjwt
-python-dotenv
-raiden
 raiden_contracts
 uvicorn
-web3==5.12.1
+web3
 
 # Testing / CI / Document Generation
 bump2version
-mkdocs
-mkdocs-material
 pytest-asyncio
 pytest-django
 pytest-env
