--- a/pytest.ini
+++ b/pytest.ini
@@ -12,3 +12,6 @@ env =
 filterwarnings =
     ignore:The loop argument is deprecated:DeprecationWarning
     ignore::django.utils.deprecation.RemovedInDjango40Warning
+    ignore::django.utils.deprecation.RemovedInDjango41Warning
+    ignore:This module and all its contents is deprecated in favour of new moneyed.l10n.format_money.:DeprecationWarning
+    ignore:`CURRENCY_DECIMAL_PLACES_DISPLAY` is deprecated and will be removed in django-money 3.0.:DeprecationWarning
