--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,46 +26,6 @@ services:
       POSTGRES_USER: "${HUB20_DATABASE_USER:-hub20}"
       POSTGRES_PASSWORD: "${HUB20_DATABASE_PASSWORD:-hub20_pass}"
 
-
-  ethereum:
-    image: ethereum/client-go:stable
-    stop_signal: SIGINT
-    stop_grace_period: 1m
-    ports:
-      - "30303:30303"
-      - "30303:30303/udp"
-      - "8545:8545"
-      - "8546:8546"
-      - "8547:8547"
-    entrypoint:
-      - "geth"
-      - "--goerli"
-      - "--nousb"
-      - "--http"
-      - "--http.addr=0.0.0.0"
-      - "--http.api=eth,net,web3"
-      - "--http.vhosts=*"
-      - "--http.corsdomain=*"
-      - "--ws"
-      - "--ws.origins=*"
-      - "--ws.addr=0.0.0.0"
-      - "--ws.api=eth,net,web3"
-      - "--datadir=/chaindata"
-      - "--cache=4096"
-    healthcheck:
-      test: ["CMD", "geth", "attach", "http://localhost:8545", "--exec", "eth.blockNumber"]
-      interval: 10s
-      retries: 10
-    restart: unless-stopped
-
-  raiden:
-    image: "hub20_raiden:${TAG-latest}"
-    build:
-      context: ./docker/build/raiden
-    ports:
-      - "5001:5001"
-    restart: unless-stopped
-
   # Redis for cache, session engine, celery and channels transport
   redis:
     image: redis:latest
@@ -76,14 +36,17 @@ services:
       retries: 50
     restart: unless-stopped
 
-  # All Hub20 services that on the base image
+  # services that run off the base image
   # Admin backend
   admin:
     <<: *backend_service
+    environment:
+      HUB20_URLCONF_MODULE: hub20.admin.urls
+
     command: >
       /bin/bash -c '
         django-admin collectstatic --noinput
-        uvicorn hub20.admin.asgi:application --port 80 --host 0.0.0.0 --root-path="/admin" --reload --reload-dir /app/hub20
+        uvicorn hub20.api.asgi:application --port 80 --host 0.0.0.0 --reload --reload-dir /app/hub20
       '
 
   # Web API
@@ -93,7 +56,7 @@ services:
       /bin/bash -c '
         django-admin migrate;
         django-admin collectstatic --noinput
-        uvicorn hub20.api.asgi:application --port 80 --host 0.0.0.0 --root-path="/api" --reload --reload-dir /app/hub20
+        uvicorn hub20.api.asgi:application --port 80 --host 0.0.0.0 --reload --reload-dir /app/hub20
       '
 
   # Celery app
