--- a/docker/compose/dev.yml
+++ b/docker/compose/dev.yml
@@ -51,23 +51,55 @@ services:
 
   db:
     <<: *development_service
-
     volumes:
       - "${HUB20_DATABASE_MOUNT_PATH:-../../docker/volumes/database/hub20}:/var/lib/postgresql/data"
 
+
   ethereum:
-    <<: *development_service
+    image: ethereum/client-go:stable
+    restart: unless-stopped
+    stop_signal: SIGINT
+    stop_grace_period: 1m
+    ports:
+      - "30303:30303"
+      - "30303:30303/udp"
+      - "8545:8545"
+      - "8546:8546"
+      - "8547:8547"
+    entrypoint:
+      - "geth"
+      - "--goerli"
+      - "--nousb"
+      - "--http"
+      - "--http.addr=0.0.0.0"
+      - "--http.api=eth,net,web3"
+      - "--http.vhosts=*"
+      - "--http.corsdomain=*"
+      - "--ws"
+      - "--ws.origins=*"
+      - "--ws.addr=0.0.0.0"
+      - "--ws.api=eth,net,web3"
+      - "--datadir=/chaindata"
+      - "--cache=4096"
+    healthcheck:
+      test: ["CMD", "geth", "attach", "http://localhost:8545", "--exec", "eth.blockNumber"]
+      interval: 10s
+      retries: 10
     networks:
       dev:
         ipv4_address: 10.0.20.90
-
     volumes:
       - "${HUB20_GETH_MOUNT_PATH:-../../docker/volumes/geth/goerli}:/chaindata"
 
-  # Run raiden
   raiden:
     <<: *development_service
     <<: *raiden_service
+    image: "hub20_raiden:${TAG-latest}"
+    build:
+      context: ./docker/build/raiden
+    restart: unless-stopped
+    ports:
+      - "5001:5001"
     depends_on:
       - ethereum
 
@@ -82,6 +114,25 @@ services:
     networks:
       dev:
         ipv4_address: 10.0.20.98
+
+  swagger:
+    <<: *development_service
+    stdin_open: true
+    tty: true
+    environment:
+      HUB20_URLCONF_MODULE: hub20.api.swagger_urls
+
+    command: >
+      /bin/bash -c '
+        django-admin collectstatic --noinput
+        uvicorn hub20.api.asgi:application --port 80 --host 0.0.0.0 --reload --reload-dir /app/hub20
+      '
+    volumes:
+      - "${HUB20_APP_MOUNT_PATH:-./}:/app"
+      - "${HUB20_MEDIA_MOUNT_PATH:-./docker/volumes/media/hub20/static}:/var/hub20/static"
+    networks:
+      dev:
+        ipv4_address: 10.0.20.97
 
   # Web API
   web:
