--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,13 +67,7 @@ services:
   # Celery beat (periodic tasks)
   celery_beat:
     <<: *backend_service
-    command: >
-      /bin/bash -c "
-        mkdir -p /var/hub20/celery;
-        while ! nc -w 1 -z db 5432; do sleep 0.5; done;
-        while ! nc -w 1 -z redis 6379; do sleep 0.5; done;
-        celery -A hub20.api beat -l info -s /var/hub20/celery/celerybeat-schedule.db --pidfile=/var/hub20/celery/celerybeat.pid
-      "
+    command: celery -A hub20.api beat -l info -S django
 
   # Background command to listen to blockchain and raiden events
   job_listen_events:
