(chore) Update eth_wallet -> hdwallet
The author of the eth_wallet package has put the package in archive-mode
for a long while, and now it seems he pulled the package from PyPI entirely
in favor of more general package hdwallet.

The functionality stays pretty much the same, except for the fact that
the wallet creation via root key now requires a properly formatted
"xprv" string, which forced me to use a real xprv key in the pytest
configuration (taken from hdwallet site, so this key should be
considered burned)

--- a/requirements.in
+++ b/requirements.in
@@ -15,13 +15,14 @@ django_smtp_ssl
 django-money
 ethereum
 eth-abi
-eth-wallet
+hdwallet
 mypy_extensions
 psycopg2-binary
 pycoingecko
 pycryptodome
 pyjwt
 raiden_contracts
+uritemplate
 uvicorn
 web3
 
@@ -31,4 +32,3 @@ pytest-asyncio
 pytest-django
 pytest-env
 factory_boy
-uritemplate
