--- a/requirements.txt
+++ b/requirements.txt
@@ -32,7 +32,9 @@ automat==20.2.0
 babel==2.9.1
     # via py-moneyed
 base58==2.1.0
-    # via multiaddr
+    # via
+    #   hdwallet
+    #   multiaddr
 billiard==3.6.4.0
     # via celery
 bitarray==1.2.2
@@ -134,7 +136,7 @@ djangorestframework==3.12.4
     #   -r requirements.in
     #   django-rest-auth
 ecdsa==0.17.0
-    # via eth-wallet
+    # via hdwallet
 eth-abi==2.1.1
     # via
     #   -r requirements.in
@@ -175,8 +177,6 @@ eth-utils==1.10.0
     #   raiden-contracts
     #   rlp
     #   web3
-eth-wallet==0.3.1
-    # via -r requirements.in
 ethereum==2.3.2
     # via -r requirements.in
 factory-boy==3.2.0
@@ -187,6 +187,8 @@ future==0.18.2
     # via ethereum
 h11==0.12.0
     # via uvicorn
+hdwallet==1.3.2
+    # via -r requirements.in
 hexbytes==0.2.1
     # via
     #   eth-account
@@ -216,7 +218,7 @@ kombu==5.1.0
 lru-dict==1.1.7
     # via web3
 mnemonic==0.19
-    # via eth-wallet
+    # via hdwallet
 msgpack==1.0.2
     # via channels-redis
 multiaddr==0.0.9
@@ -282,8 +284,8 @@ pyrsistent==0.17.3
     # via jsonschema
 pysha3==1.0.2
     # via
-    #   eth-wallet
     #   ethereum
+    #   hdwallet
 pytest-asyncio==0.15.1
     # via -r requirements.in
 pytest-django==4.3.0
