--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ aioredis==1.3.1
     # via channels-redis
 amqp==5.0.6
     # via kombu
+anyio==3.3.4
+    # via httpcore
 asgiref==3.3.4
     # via
     #   channels
@@ -48,7 +50,9 @@ celery==5.1.0
     #   -r requirements.in
     #   django-celery-beat
 certifi==2020.12.5
-    # via requests
+    # via
+    #   httpx
+    #   requests
 cffi==1.14.5
     # via
     #   coincurve
@@ -61,6 +65,8 @@ channels==3.0.3
     #   channels-redis
 chardet==4.0.0
     # via requests
+charset-normalizer==2.0.7
+    # via httpx
 click-didyoumean==0.0.3
     # via celery
 click-plugins==1.1.1
@@ -81,6 +87,12 @@ coincurve==15.0.0
     #   raiden-contracts
 constantly==15.1.0
     # via twisted
+coreapi==2.3.3
+    # via drf-yasg
+coreschema==0.0.4
+    # via
+    #   coreapi
+    #   drf-yasg
 cryptography==3.4.7
     # via
     #   autobahn
@@ -132,12 +144,16 @@ django==3.2.3
     #   django-timezone-field
     #   djangorestframework
     #   drf-nested-routers
+    #   drf-yasg
 djangorestframework==3.12.4
     # via
     #   -r requirements.in
     #   django-rest-auth
     #   drf-nested-routers
+    #   drf-yasg
 drf-nested-routers==0.93.3
+    # via -r requirements.in
+drf-yasg==1.20.0
     # via -r requirements.in
 ecdsa==0.17.0
     # via hdwallet
@@ -190,7 +206,9 @@ faker==8.4.0
 future==0.18.2
     # via ethereum
 h11==0.12.0
-    # via uvicorn
+    # via
+    #   httpcore
+    #   uvicorn
 hdwallet==1.3.2
     # via -r requirements.in
 hexbytes==0.2.1
@@ -200,27 +218,41 @@ hexbytes==0.2.1
     #   web3
 hiredis==2.0.0
     # via aioredis
+httpcore==0.13.7
+    # via httpx
+httpx==0.20.0
+    # via -r requirements.in
 hyperlink==21.0.0
     # via
     #   autobahn
     #   twisted
 idna==2.10
     # via
+    #   anyio
     #   hyperlink
     #   requests
+    #   rfc3986
     #   twisted
 incremental==21.3.0
     # via twisted
+inflection==0.5.1
+    # via drf-yasg
 iniconfig==1.1.1
     # via pytest
 ipfshttpclient==0.7.0a1
     # via web3
+itypes==1.2.0
+    # via coreapi
+jinja2==3.0.2
+    # via coreschema
 jsonschema==3.2.0
     # via web3
 kombu==5.1.0
     # via celery
 lru-dict==1.1.7
     # via web3
+markupsafe==2.0.1
+    # via jinja2
 mnemonic==0.19
     # via hdwallet
 msgpack==1.0.2
@@ -237,7 +269,9 @@ netaddr==0.8.0
 oauthlib==3.1.0
     # via requests-oauthlib
 packaging==20.9
-    # via pytest
+    # via
+    #   drf-yasg
+    #   pytest
 parsimonious==0.8.1
     # via eth-abi
 pbkdf2==1.3
@@ -327,18 +361,25 @@ requests-oauthlib==1.3.0
     # via django-allauth
 requests==2.25.1
     # via
+    #   coreapi
     #   django-allauth
     #   ipfshttpclient
     #   py-solc-x
     #   pycoingecko
     #   requests-oauthlib
     #   web3
+rfc3986[idna2008]==1.5.0
+    # via httpx
 rlp==1.2.0
     # via
     #   eth-account
     #   eth-rlp
     #   ethereum
     #   raiden-contracts
+ruamel.yaml.clib==0.2.6
+    # via ruamel.yaml
+ruamel.yaml==0.17.16
+    # via drf-yasg
 scrypt==0.8.18
     # via ethereum
 semantic-version==2.8.5
@@ -360,6 +401,11 @@ six==1.16.0
     #   pyopenssl
     #   python-dateutil
     #   service-identity
+sniffio==1.2.0
+    # via
+    #   anyio
+    #   httpcore
+    #   httpx
 sqlparse==0.4.1
     # via django
 text-unidecode==1.3
@@ -373,7 +419,10 @@ twisted[tls]==21.2.0
 txaio==21.2.1
     # via autobahn
 uritemplate==3.0.1
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   coreapi
+    #   drf-yasg
 urllib3==1.26.5
     # via requests
 uvicorn==0.13.4
