--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,3 +11,16 @@ exclude = '''
   | dist
 )/
 '''
+
+[tool.mypy]
+ignore_missing_imports = true
+check_untyped_defs = true
+disallow_untyped_defs = false
+warn_unused_configs = true
+warn_unused_ignores = true
+
+[[tool.mypy.overrides]]
+module = [
+    "hub20"
+]
+ignore_missing_imports = true
