--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,7 +62,7 @@ services:
   # Celery app
   celery:
     <<: *backend_service
-    command: celery -A hub20.api worker -l info
+    command: celery -A hub20.api worker -l info -E
 
   # Celery beat (periodic tasks)
   celery_beat:
