--- a/requirements.txt
+++ b/requirements.txt
@@ -269,7 +269,9 @@ itypes==1.2.0
 jinja2==3.0.3
     # via coreschema
 jsonschema==3.2.0
-    # via web3
+    # via
+    #   -r requirements.in
+    #   web3
 kombu==5.2.2
     # via celery
 lru-dict==1.1.7
