--- a/requirements.txt
+++ b/requirements.txt
@@ -226,7 +226,9 @@ frozenlist==1.2.0
     #   aiohttp
     #   aiosignal
 future==0.18.2
-    # via ethereum
+    # via
+    #   ethereum
+    #   qr3
 h11==0.12.0
     # via
     #   httpcore
@@ -381,10 +383,14 @@ pytz==2021.3
     #   django-timezone-field
 pyyaml==6.0
     # via ethereum
+qr3==1.0.1
+    # via -r requirements.in
 raiden-contracts==0.39.0
     # via -r requirements.in
 redis==4.0.2
-    # via django-redis
+    # via
+    #   django-redis
+    #   qr3
 repoze.lru==0.7
     # via ethereum
 requests==2.26.0
