--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ aioredis==1.3.1
     # via channels-redis
 aiosignal==1.2.0
     # via aiohttp
-amqp==5.0.6
+amqp==5.0.9
     # via kombu
 anyio==3.3.4
     # via httpcore
@@ -53,7 +53,7 @@ bump2version==1.0.1
     # via -r requirements.in
 cached-property==1.5.2
     # via py-ecc
-celery==5.2.1
+celery==5.2.3
     # via
     #   -r requirements.in
     #   celery-pubsub
@@ -126,10 +126,13 @@ defusedxml==0.7.1
     # via python3-openid
 deprecated==1.2.13
     # via redis
-django==3.2.9
+dj-rest-auth==2.2.1
+    # via -r requirements.in
+django==4.0
     # via
     #   -r requirements.in
     #   channels
+    #   dj-rest-auth
     #   django-allauth
     #   django-celery-beat
     #   django-cors-headers
@@ -137,16 +140,15 @@ django==3.2.9
     #   django-model-utils
     #   django-money
     #   django-redis
-    #   django-rest-auth
     #   django-timezone-field
     #   djangorestframework
     #   drf-nested-routers
     #   drf-yasg
 django-allauth==0.46.0
     # via -r requirements.in
-django-celery-beat==2.2.1
+django-celery-beat @ git+https://github.com/celery/django-celery-beat
     # via -r requirements.in
-django-cors-headers==3.10.0
+django-cors-headers==3.10.1
     # via -r requirements.in
 django-filter==21.1
     # via -r requirements.in
@@ -156,18 +158,16 @@ django-model-utils==4.2.0
     # via -r requirements.in
 django-money==2.1
     # via -r requirements.in
-django-redis==5.0.0
-    # via -r requirements.in
-django-rest-auth==0.9.5
+django-redis==5.2.0
     # via -r requirements.in
 django-smtp-ssl==1.0
     # via -r requirements.in
 django-timezone-field==4.2.1
     # via django-celery-beat
-djangorestframework==3.12.4
+djangorestframework==3.13.1
     # via
     #   -r requirements.in
-    #   django-rest-auth
+    #   dj-rest-auth
     #   drf-nested-routers
     #   drf-yasg
 drf-nested-routers==0.93.4
@@ -274,7 +274,7 @@ jsonschema==3.2.0
     # via
     #   -r requirements.in
     #   web3
-kombu==5.2.2
+kombu==5.2.3
     # via celery
 lru-dict==1.1.7
     # via web3
@@ -379,8 +379,8 @@ pytz==2021.3
     # via
     #   babel
     #   celery
-    #   django
     #   django-timezone-field
+    #   djangorestframework
 pyyaml==6.0
     # via ethereum
 qr3==1.0.1
@@ -428,7 +428,6 @@ six==1.16.0
     # via
     #   automat
     #   click-repl
-    #   django-rest-auth
     #   ecdsa
     #   jsonschema
     #   multiaddr
