edit call command for web services defined default docker-compose
By default, there is no need for uvicorn to be called with --reload
directives. These are only used during development

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,7 @@ services:
     command: >
       /bin/bash -c '
         django-admin collectstatic --noinput
-        uvicorn hub20.api.asgi:application --port 80 --host 0.0.0.0 --reload --reload-dir /app/hub20
+        uvicorn hub20.api.asgi:application --port 80 --host 0.0.0.0
       '
 
   # Web API
@@ -56,7 +56,7 @@ services:
       /bin/bash -c '
         django-admin migrate;
         django-admin collectstatic --noinput
-        uvicorn hub20.api.asgi:application --port 80 --host 0.0.0.0 --reload --reload-dir /app/hub20
+        uvicorn hub20.api.asgi:application --port 80 --host 0.0.0.0
       '
 
   # Celery app
