User Token / User Token List management
Token List improvements:

- Refactor model for TokenList and UserTokenList. The idea is that
  TokenList will be used for templates and UserTokenLists will be
  "remixed" by the users to suit their preferences

- For admins, it is possible to import a token list via the REST API.
  The "/tokenlists/import" endpoint expects a URL and it will be
  processed via celery, just like the `load_token_list` django command.

- For normal users, it is possible to clone one of the admin-defined
  token lists and then edit as your own.

Token management:

- Add UserPreferences model and view to list user tokens
- Endpoint to list tokens now also allow user-creation of new tokens.
  User needs to submit only the address and the chain id. Validation
  checks if the contract address can determine the basic functions of
  the ERC20 contract (name, symbol, decimals) and also tries to estimate
  the gas fees to execute a transfer.

--- a/requirements.in
+++ b/requirements.in
@@ -15,6 +15,7 @@ djangorestframework
 djangorestframework-link-header-pagination
 django_smtp_ssl
 django-money
+django-taggit
 drf-nested-routers
 drf-yasg
 ethereum
