--- a/requirements.in
+++ b/requirements.in
@@ -1,4 +1,5 @@
 celery
+celery-pubsub
 channels
 channels_redis
 django>=4
@@ -33,9 +34,6 @@ raiden_contracts
 uritemplate
 uvicorn
 web3
-
-# Replace this with pypi's package once it is updated
-git+https://github.com/mushroomlabs/celery-pubsub.git
 
 # Testing / CI / Document Generation
 bump2version
