--- a/requirements.in
+++ b/requirements.in
@@ -8,6 +8,7 @@ git+https://github.com/celery/django-celery-beat
 # django-celery-beat
 dj-rest-auth
 django-admin-interface
+django-celery-results
 django-cors-headers
 django-filter
 django-ipware
