--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,7 +1,7 @@
 [bumpversion]
 current_version = 0.4.2
 commit = True
-tag = False
+tag = True
 
 [bumpversion:file:setup.py]
 serialize = {major}.{minor}.{patch}
