--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -70,7 +70,7 @@ publish_python_package:
     - twine upload dist/* --non-interactive
 
   rules:
-    - if: '$CI_COMMIT_TAG =~ /v^\d+\.\d+\.\d+/'
+    - if: '$CI_COMMIT_TAG =~ /^\d+\.\d+\.\d+$/'
 
 build_docker_image:
   image: docker:19
