Improved token management
Users should not be able to create new tokens. Malicious users can put
a contract with a bogus 'transfer' function, so we should only allow
tokens being added by the hub operator

Tokens should not be listed by default

Admin improvements. Add actions and filters on token admin page

 - List/delist tokens
 - Add filter that shows only tokens from connected chains
 - Add filter that shows only tokens from connected chains and listed
 - add admin filters for stable tokens

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,22 +57,13 @@ services:
     environment:
       HUB20_URLCONF_MODULE: hub20.admin.urls
 
-    command: >
-      /bin/bash -c '
-        django-admin collectstatic --noinput
-        uvicorn hub20.api.asgi:application --port 80 --host 0.0.0.0
-      '
+    command: uvicorn hub20.api.asgi:application --port 80 --host 0.0.0.0
 
   # Web API
   web:
     <<: *backend_service
     <<: *backend_web_service
-    command: >
-      /bin/bash -c '
-        django-admin migrate;
-        django-admin collectstatic --noinput
-        uvicorn hub20.api.asgi:application --port 80 --host 0.0.0.0
-      '
+    command: uvicorn hub20.api.asgi:application --port 80 --host 0.0.0.0
 
   # Celery app
   celery:
